helm/k8s-dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`k8s.umhomelab.com`) || Host(`www.k8s.umhomelab.com`)"
      kind: Rule
      middlewares:
        - name: authentik-bearer
          namespace: auth
      services:
        - name: kubernetes-dashboard-web
          namespace: dashboard
          port: 8000
    - match: "Host(`k8s.umhomelab.com`) && PathPrefix(`/api`) || Host(`www.k8s.umhomelab.com`) && PathPrefix(`/api`)"
      kind: Rule
      services:
        - name: kubernetes-dashboard-api
          namespace: dashboard
          port: 9000
      middlewares:
        - name: authentik-bearer
          namespace: auth
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-login
  namespace: dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`k.umhomelab.com`) || Host(`www.k.umhomelab.com`)"
      kind: Rule
      services:
        - name: kubernetes-dashboard-web
          namespace: dashboard
          port: 8000
    - match: "Host(`k.umhomelab.com`) && PathPrefix(`/api`) || Host(`www.k.umhomelab.com`) && PathPrefix(`/api`)"
      kind: Rule
      services:
        - name: kubernetes-dashboard-api
          namespace: dashboard
          port: 9000
  tls: {}
